--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@plasmohq/storage": "^1.10.0",
     "plasmo": "0.87.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
