Made a currency changer

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.6.6",
     "@plasmohq/storage": "^1.10.0",
+    "cmdk": "^1.0.0",
     "plasmo": "0.87.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
