--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "currency-highlight",
-  "displayName": "Currency highlight",
+  "name": "curverter",
+  "displayName": "Curverter: Currency conversion on highlight",
   "version": "0.0.1",
   "description": "A chrome extension which converts the higlighted currency",
   "author": "Philip Flyvholm",
@@ -9,6 +9,7 @@
     "build": "plasmo build",
     "package": "plasmo package"
   },
+  "license": "MIT",
   "dependencies": {
     "@floating-ui/dom": "^1.6.6",
     "@plasmohq/storage": "^1.10.0",
